# ProjectOSWorkbench

./: README.md
docs/: vault-conventions.md
editions/flet-python/: .gitignore  README.md  pyproject.toml
editions/flet-python/docs/: testing-tools.md
editions/flet-python/scripts/: check_build_refs.py  preflight.sh  smoke_build.py  wp_publish_check.py
editions/flet-python/src/: brain.py  config.py  main.py  models.py  osactions.py  publish.py  store.py  telegram_capture.py  telegram_daemon.py  theme.py  title_themes.json  tools.py  vault.py
editions/flet-python/src/views/: __init__.py  people.py
